@@ -1,3 +1,8 @@
+* Tue Jun 24 2025 Mike Riddle <mike@sicura.us> - 1.0.0
+- Remove el7 support
+- Add el10 support
+- Remove simplib dependency
+
 * Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 0.6.0
 - [puppetsync] Add EL9 support
 
